# momentum

./: .env.example  .gitignore  DISCUSSION.md  OUTPUTS.md  RATIOS.md  USAGE.md  cli.py  momentum_deceleration_plan_v2.md  momentum_framework_extension_plan_v1.md  pyproject.toml
momentum_decel/: __init__.py  cli.py  config.py  utils.py
momentum_decel/breadth/: __init__.py  lane3_integration.py  universe_decel.py
momentum_decel/composite/: __init__.py  flattening_score.py  inflection_score.py  leadership_score.py  normalizer.py  recovery_score.py  scorer.py  state_machine.py  state_machine_v2.py
momentum_decel/dashboard/: __init__.py  discord_panel.py  sector_heatmap.py  single_instrument.py  snapshot.py
momentum_decel/data/: __init__.py  etf_universe.py  loader.py
momentum_decel/groups/: __init__.py  aggregator.py
momentum_decel/indicators/: __init__.py  efficiency_ratio.py  ema_distance.py  hurst.py  quadratic_curvature.py  theil_sen.py  trend_coherence.py
momentum_decel/relative_strength/: __init__.py  ratio_indicators.py
momentum_decel/validation/: event_study.py  exhaustion_study.py  group_relative_severity.py  recovery_study.py  walk_forward.py
